feat: create CRUD for list
